--- a/teacher.html
+++ b/teacher.html
@@ -39,6 +39,13 @@
 					</div>
 
 					<div class="control-group">
+						<label for="segmentationSlider" class="control-label">
+							強制斷句: <span id="segmentationValue">8</span> 秒
+						</label>
+						<input type="range" id="segmentationSlider" class="slider-control" min="2" max="30" step="1" value="8">
+					</div>
+
+					<div class="control-group">
 						<select id="micSelect" class="mic-select"></select>
 					</div>
 
